# tokenstats

./: .dockerignore  .gitignore  AGENTS.md  CHECKPOINT.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
deploy/: Caddyfile  env.example  nginx.conf.example
docs/: DEPLOY.md  USAGE.md
src/: config.rs  main.rs  market.rs  persist.rs
src/nostr/: mod.rs
src/oracle/: mod.rs
src/providers/: catalog.rs  mod.rs  openrouter.rs  routstr.rs
src/store/: mod.rs
src/web/: handlers.rs  mod.rs
