[package]
name = "tokenstats"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Sovereign inference market observability + oracle (Routstr + providers)"
license = "MPL-2.0"
readme = "README.md"
keywords = ["nostr", "inference", "oracle", "routstr", "observability"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Web dashboard (lightweight Axum)
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Nostr (Routstr discovery / RIP-02 kind 38421)
nostr-sdk = "0.30"

# HTTP client for provider polling
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
anyhow = "1.0"
thiserror = "2.0"

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
